Notification support added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,9 @@
         <argument
             android:name="photoUrl"
             app:argType="string" />
+        <argument
+            android:name="userIdOS"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/addFriendFragment"
